--- a/src/app/shared/components/image-upload-form/image-upload-form.component.html
+++ b/src/app/shared/components/image-upload-form/image-upload-form.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<form [formGroup]="formGroup" (submit)="onSubmit()"
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit()"
   class="upload-image" >
   <h2 i18n="Title of form to upload images">Upload Images</h2>
   <mat-form-field appearance="fill">
