--- a/src/app/store/routes/cart-review/store-cart-review.component.html
+++ b/src/app/store/routes/cart-review/store-cart-review.component.html
@@ -7,7 +7,7 @@
 
 <div class="cart">
   <h3 i18n="cart contents review|Title of widget displaying contents of cart">Cart Review</h3>
-  <app-store-cart-contents-table>
+  <app-store-cart-contents-table [editable]="inputEditable">
   </app-store-cart-contents-table>
   <mat-divider></mat-divider>
   <div class="subtotal">
