--- a/src/app/management/components/sidenav/management-sidenav.component.html
+++ b/src/app/management/components/sidenav/management-sidenav.component.html
@@ -7,7 +7,7 @@
 
 <mat-nav-list>
   <a mat-list-item *ngFor="let module of (modules$ | async)"
-    [routerLink]="[baseModule, module.path]"
+    [routerLink]="['/management', module.path]"
     [class.active]="module.active">
     <mat-icon>{{ module.icon }}</mat-icon>
     {{ module.text }}
