--- a/src/app/store/components/header/store-header.component.html
+++ b/src/app/store/components/header/store-header.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<app-store-header-brand></app-store-header-brand>
+<app-header-brand></app-header-brand>
 <app-store-header-navigation></app-store-header-navigation>
 <app-store-header-search-form></app-store-header-search-form>
 <ng-container *ngIf="(isLoggedIn$ | async); else notLoggedIn">
