--- a/src/app/store/components/header/store-header.component.css
+++ b/src/app/store/components/header/store-header.component.css
@@ -12,8 +12,9 @@
   align-items: stretch;
 }
 
-app-store-header-brand {
+app-header-brand {
   flex: 0 0 auto;
+  height: 7rem;
 }
 
 app-store-header-navigation {
