feat: add a loading spinner during app startup

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,8 @@
  * This software is released under the MIT License.
  * https://opensource.org/licenses/MIT
  */
+
+:host {
+  display: block;
+  height: 100vh;
+}
