--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,8 @@
   font-family: Roboto, sans-serif;
 }
 
-body, app-root {
-  width: 100vw;
-  height: 100vh;
+body {
   margin: 0;
-  padding: 0;
   overflow: hidden;
 }
 
