--- a/src/app/management/forms/shipper/shipper-form.component.html
+++ b/src/app/management/forms/shipper/shipper-form.component.html
@@ -5,11 +5,11 @@
   https://opensource.org/licenses/MIT
 -->
 
-<form [formGroup]="formGroup">
+<fieldset [formGroup]="formGroup">
   <mat-form-field class="name">
     <input matInput formControlName="name"
       placeholder="Name"
       i18n-placeholder="Name of field for the identifiying name of a shipper or shipping service"
       (blur)="onTouched()" />
   </mat-form-field>
-</form>
+</fieldset>
