--- a/src/app/shared/forms/person/person-form.component.html
+++ b/src/app/shared/forms/person/person-form.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<form [formGroup]="formGroup">
+<fieldset [formGroup]="formGroup">
 
   <mat-form-field class="firstName">
     <input matInput formControlName="firstName"
@@ -42,4 +42,4 @@
       placeholder="Phone 2"
       i18n-placeholder="Name of field for the alternative phone number of a person" />
   </mat-form-field>
-</form>
+</fieldset>
