--- a/src/app/management/forms/image/image-form.component.html
+++ b/src/app/management/forms/image/image-form.component.html
@@ -5,8 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<form [formGroup]="formGroup">
-
+<fieldset [formGroup]="formGroup">
   <mat-form-field class="filename">
     <input matInput formControlName="filename"
       placeholder="Filename"
@@ -24,4 +23,4 @@
       placeholder="Code"
       i18n-placeholder="Name of field for image code" />
   </mat-form-field>
-</form>
+</fieldset>
