--- a/src/app/management/forms/product-category/product-category-form.component.html
+++ b/src/app/management/forms/product-category/product-category-form.component.html
@@ -5,8 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<form [formGroup]="formGroup">
-
+<fieldset [formGroup]="formGroup">
   <mat-form-field class="code">
     <input matInput formControlName="code"
       placeholder="Code"
@@ -24,4 +23,4 @@
     placeholder="Parent"
     i18n-placeholder="Name of field that references the containing parent of a category">
   </app-product-category-selector-form-field>
-</form>
+</fieldset>
