--- a/src/app/management/forms/product/product-form.component.css
+++ b/src/app/management/forms/product/product-form.component.css
@@ -5,13 +5,19 @@
  * https://opensource.org/licenses/MIT
  */
 
-form {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 1rem;
-}
-
 @media(min-width: 641px) {
+  fieldset {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+      'images images images'
+      'barcode name name'
+      'category category price'
+      /* 'type type type'
+      'price stock cStock' */
+      'desc desc desc'
+      'desc desc desc';
+  }
+
   .images {
     grid-area: images;
   }
@@ -35,17 +41,5 @@ form {
   } */
   .desc {
     grid-area: desc;
-  }
-
-  form {
-    grid-template-columns: none;
-    grid-template-areas:
-      'images images images'
-      'barcode name name'
-      'category category price'
-      /* 'type type type'
-      'price stock cStock' */
-      'desc desc desc'
-      'desc desc desc';
   }
 }
