--- a/src/app/management/forms/product/product-form.component.html
+++ b/src/app/management/forms/product/product-form.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<form [formGroup]="formGroup">
+<fieldset [formGroup]="formGroup">
   <app-slideshow class="images"
     formControlName="images"
     [autocycle]="false"
@@ -52,4 +52,4 @@
       placeholder="Description"
       i18n-placeholder="Name of field for product description"></textarea>
   </mat-form-field>
-</form>
+</fieldset>
