--- a/src/app/management/forms/salesperson/salesperson-form.component.html
+++ b/src/app/management/forms/salesperson/salesperson-form.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<form [formGroup]="formGroup">
+<fieldset [formGroup]="formGroup">
   <app-person-form formControlName="person">
   </app-person-form>
-</form>
+</fieldset>
