--- a/src/app/management/forms/user/user-form.component.html
+++ b/src/app/management/forms/user/user-form.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<form [formGroup]="formGroup">
+<fieldset [formGroup]="formGroup">
   <mat-form-field>
     <input matInput formControlName="name"
       placeholder="User name"
@@ -38,4 +38,4 @@
         [value]="r.name">{{ r.name }}</mat-option>
     </mat-select>
   </mat-form-field>
-</form>
+</fieldset>
