--- a/src/app/shared/components/product-filters-panel/product-filters-panel.component.css
+++ b/src/app/shared/components/product-filters-panel/product-filters-panel.component.css
@@ -5,14 +5,8 @@
  * https://opensource.org/licenses/MIT
  */
 
-form {
-  display: grid;
-  grid-template-columns: 1fr;
-}
-
 @media(min-width: 1008px) {
-  form {
-    grid-gap: 1rem;
+  fieldset {
     grid-template-columns: 1fr 1fr;
   }
 }
