--- a/src/app/shared/forms/address/address-form.component.html
+++ b/src/app/shared/forms/address/address-form.component.html
@@ -5,7 +5,7 @@
   https://opensource.org/licenses/MIT
 -->
 
-<form [formGroup]="formGroup">
+<fieldset [formGroup]="formGroup">
   <mat-form-field class="city">
     <input matInput formControlName="city"
       placeholder="City"
@@ -31,4 +31,4 @@
       placeholder="Notes"
       i18n-placeholder="Name of field for comments and extra information about a given address" />
   </mat-form-field>
-</form>
+</fieldset>
