--- a/src/app/store/components/header/search-form/store-header-search-form.component.css
+++ b/src/app/store/components/header/search-form/store-header-search-form.component.css
@@ -5,9 +5,11 @@
  * https://opensource.org/licenses/MIT
  */
 
-form {
+fieldset {
   display: flex;
   align-items: stretch;
+  gap: unset;
+  grid-template-columns: none;
 }
 
 .searchFilter {
