--- a/src/app/shared/dialogs/edit-profile-form/edit-profile-form-dialog.component.html
+++ b/src/app/shared/dialogs/edit-profile-form/edit-profile-form-dialog.component.html
@@ -9,13 +9,12 @@
 <app-centered-mat-spinner *ngIf="saving$ | async">
 </app-centered-mat-spinner>
 
-<form [formGroup]="formGroup">
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
   <app-person-form formControlName="person">
   </app-person-form>
 
   <div class="actions">
-    <button mat-button mat-raised-button type="button"
-      (click)="onSubmit()"
+    <button mat-button mat-raised-button type="submit"
       i18n="confirm|Label for action button to accept and proceed">Confirm</button>
     <button mat-button mat-raised-button type="button"
       [color]="cancelButtonColor$ | async"
