--- a/src/app/management/forms/sell/sell-form.component.html
+++ b/src/app/management/forms/sell/sell-form.component.html
@@ -47,59 +47,13 @@
         (click)="onClickAddProducts()"
         i18n="add products|Label for action button to include products into sell">Add</button>
     </div>
-    <div class="table-wrapper">
-      <table mat-table [dataSource]="sellDetails$">
-        <ng-container matColumnDef="product">
-          <th mat-header-cell *matHeaderCellDef
-            i18n="product name|Name of table header for name of product">Name</th>
-          <td mat-cell *matCellDef="let detail">
-            {{ detail.product.name }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef
-            i18n="Name of table header for price per product unit">Price</th>
-          <td mat-cell *matCellDef="let detail">
-            {{ detail.product.price | currency }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="quantity">
-          <th mat-header-cell *matHeaderCellDef
-            i18n="Name of table header for quantity of products (in units)">Units</th>
-          <td mat-cell *matCellDef="let detail; let i=index">
-            <button mat-button mat-icon-button type="button"
-              aria-label="Add one"
-              i18n-aria-label="add product unit|Label for action button to add one unit of a product in a sell"
-              (click)="onClickIncreaseDetailProductQuantity(i)">
-              <mat-icon>add</mat-icon>
-            </button>
-            {{ detail.units }}
-            <button mat-button mat-icon-button type="button"
-              [disabled]="detail.units < 2"
-              aria-label="Remove one"
-              i18n-aria-label="remove product unit|Label for action button to remove one unit of a product in a sell"
-              (click)="onClickDecreaseDetailProductQuantity(i)">
-              <mat-icon>remove</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let i=index">
-            <button mat-button mat-icon-button type="button"
-              color="warn"
-              aria-label="Remove"
-              i18n-aria-label="remove all product units|Label for action button to remove all units of a product in a sell"
-              (click)="onClickRemoveDetail(i)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
-      </table>
-    </div>
+    <app-sell-details-table [editable]="true"
+      [sellDetails]="sellDetails$ | async"
+      [tableColumns]="tableColumns"
+      (increaseUnitsAtIndex)="onClickIncreaseDetailProductQuantity($event)"
+      (decreaseUnitsAtIndex)="onClickDecreaseDetailProductQuantity($event)"
+      (removeAtIndex)="onClickRemoveDetail($event)">
+    </app-sell-details-table>
   </mat-card>
 
   <div class="summary">
