--- a/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.css
+++ b/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.css
@@ -5,14 +5,9 @@
  * https://opensource.org/licenses/MIT
  */
 
-:host,
-.quantity-wrapper {
-  display: grid;
-  gap: 0.5rem;
-  grid-auto-flow: column;
+:host {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
   align-items: center;
-}
-
-.quantity-wrapper {
-  font-size: 1.25rem;
 }
