--- a/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.html
+++ b/src/app/shared/components/cart-product-units-control/cart-product-units-control.component.html
@@ -5,22 +5,19 @@
   https://opensource.org/licenses/MIT
 -->
 
-<mat-icon>shopping_cart</mat-icon>
-<div class="quantity-wrapper">
-  <button type="button" class="decrease-quantity"
-    mat-button mat-icon-button
-    aria-label="Remove one"
-    i18n-aria-label="remove product unit|Label for action button to take one (1) unit of a product away from the shopping cart"
-    [disabled]="notInCart"
-    (click)="onClickDecrease()">
-    <mat-icon>remove</mat-icon>
-  </button>
-  <span class="quantity">{{ units }}</span>
-  <button type="button" class="increase-quantity"
-    aria-label="Add one"
-    i18n-aria-label="add product unit|Label for action button to include one (1) more unit of a product in the shopping cart"
-    mat-button mat-icon-button
-    (click)="onClickIncrease()">
-    <mat-icon>add</mat-icon>
-  </button>
-</div>
+<button type="button" class="increase-quantity"
+  aria-label="Add one"
+  i18n-aria-label="add product unit|Label for action button to include one (1) more unit of a product in the shopping cart"
+  mat-button mat-icon-button
+  (click)="onClickIncrease()">
+  <mat-icon>add</mat-icon>
+</button>
+<span class="quantity">{{ units }}</span>
+<button type="button" class="decrease-quantity"
+  mat-button mat-icon-button
+  aria-label="Remove one"
+  i18n-aria-label="remove product unit|Label for action button to take one (1) unit of a product away from the shopping cart"
+  [disabled]="oneOrLessUnits"
+  (click)="onClickDecrease()">
+  <mat-icon>remove</mat-icon>
+</button>
