--- a/src/app/store/routes/cart-review/store-cart-review.component.html
+++ b/src/app/store/routes/cart-review/store-cart-review.component.html
@@ -7,8 +7,12 @@
 
 <div class="cart">
   <h3 i18n="cart contents review|Title of widget displaying contents of cart">Cart Review</h3>
-  <app-store-cart-contents-table [editable]="inputEditable">
-  </app-store-cart-contents-table>
+  <app-sell-details-table [editable]="inputEditable"
+    [sellDetails]="cartContents$ | async"
+    (increaseUnitsAtIndex)="onIncreaseProductQuantityAtIndex($event)"
+    (decreaseUnitsAtIndex)="onDecreaseProductQuantityAtIndex($event)"
+    (removeAtIndex)="onRemoveProductAtIndex($event)">
+  </app-sell-details-table>
   <mat-divider></mat-divider>
   <div class="subtotal">
     <span class="label" i18n="subtotal sell value|Label with cart subtotal value (products only)">Subtotal</span>
