chore: optimize some css rules

--- a/src/app/management/routes/data-manager.styles.css
+++ b/src/app/management/routes/data-manager.styles.css
@@ -5,19 +5,16 @@
  * https://opensource.org/licenses/MIT
  */
 
-.data-manager, .loading {
-  width: 100%;
+:host {
+  display: block;
   height: 100%;
-  display: flex;
-  overflow: hidden;
 }
 
 .data-manager {
+  width: 100%;
+  height: 100%;
+  display: flex;
   flex-flow: column nowrap;
-}
-.loading {
-  align-content: center;
-  justify-content: center;
 }
 
 .table-wrapper {
